# passman

./: CMakeLists.txt  README.md  main.cpp  man  pasman.cpp  pasman.h  pass
